tests/paczka1/small_fuzzy/86331538.err
Error in line 8: i1dUz A271 32,6
Error in line 13: ki9Tl20 A533 46,0
